syntax = "proto3";
package abag.quasarnode.qoracle;

import "gogoproto/gogo.proto";

option go_package = "github.com/abag/quasarnode/x/qoracle/types";

message OneHopIbcDenomMapping {
  // option (gogoproto.goproto_stringer) = false;

  string originName = 1 [(gogoproto.moretags) = "yaml:\"origin_name\""]; // Original denom name i.e. uatom
  string quasar = 2  [(gogoproto.moretags) = "yaml:\"quasar\""]; // one hop ibc denom representation in quasar
  string osmo = 3 [(gogoproto.moretags) = "yaml:\"osmo\""]; // one hop ibc denom representation in osmo
  // Representation in the other chains can be added in the future.
}
// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  
  string oracleAccounts = 1 [(gogoproto.moretags) = "yaml:\"oracle_accounts\""];
  repeated  string stableDenoms = 2 [(gogoproto.moretags) = "yaml:\"stable_denoms\""];
  repeated OneHopIbcDenomMapping oneHopDenomMap = 3 [(gogoproto.moretags) = "yaml:\"onehop_ibcdenoms\""];
}